# animal-welfare-verifier

./: .gitignore  README.md  dev.sh  share-dev.sh  動保列表.xlsx
backend/: .env.example  README.md  pyproject.toml
backend/app/: auth.py  config.py  main.py  seed_data.py
backend/app/models/: media.py  profile.py  search.py  shelter.py  watchlist.py
backend/app/pipelines/: base.py  facebook_groups_pipeline.py  facebook_pipeline.py  google_maps_pipeline.py  instagram_pipeline.py  mobile01_pipeline.py  news_pipeline.py  orchestrator.py  ptt_pipeline.py  registry.py  threads_pipeline.py
backend/app/routes/: auth.py  (+3 more)
backend/data/: fb_animal_welfare_groups.json
backend/examples/: entity_aliases.example.csv
backend/scripts/: analyze_reviews.py  backfill_seed_covers.py  bootstrap_top_shelters.py  classify_review_dimensions.py  expand_entity_keywords.py  fetch_fb_urls.py  import_entity_aliases.py  import_watchlist_from_xlsx.py  prune_junk_reviews.py  prune_noisy_aliases.py  refresh_all_covers.py  refresh_watchlist.py  run_pipeline.py  start_public_server.sh  weekly_browser_crawl.py
backend/tests/: test_admin_auth.py  test_analysis_service.py  test_crawl4ai_service.py  test_entity_page_route.py  test_frontend_serving.py  test_google_maps_scraper.py  test_health.py  test_media_route.py  test_official_image_service.py  test_persistence.py  test_ptt_scraper.py  test_search_provider_services.py  test_search_route.py  test_search_service.py  test_shelter_create_route.py  test_shelter_lookup_route.py  test_shelter_verification_service.py  test_watchlist_refresh_service.py
(+69 files in other folders)
